# nupic

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/research-ledger/: README.md  algorithm-ideas.md  cycle-106-table-report.md  cycle-107-table-report.md  cycle-108-table-report.md  cycle-109-table-report.md  cycle-110-table-report.md  cycle-111-table-report.md  cycle-112-table-report.md  cycle-113-table-report.md  cycle-114-table-report.md  cycle-115-table-report.md  cycle-116-table-report.md  cycle-117-table-report.md  cycle-118-table-report.md  paper-material.md
.githooks/: post-commit
.github/workflows/: release.yml
assets/png-bench/: .gitignore  README.md  baseline.json  corpus-500-dssim.tsv  corpus-500-pile-a.tsv  corpus-500-results-v117.tsv  corpus-500-ssim.tsv  corpus-500-three-axis.tsv  corpus-500-tinypng-results.tsv
assets/png-bench/cycle106-r4/: emit.tsv  pile_a_grid.tsv  pile_a_sweep.tsv  pile_a_winners.tsv
assets/png-bench/cycle107/: pile_classification.tsv  single_config_full.tsv  single_config_sample.tsv
assets/png-bench/cycle108/: rule_v1.tsv  rule_v2.tsv  rule_v3.tsv  rule_v3_full.tsv
assets/png-bench/cycle109/: validation_v2.tsv  validation_v3.tsv
assets/png-bench/cycle110/: full_verify.tsv  full_verify_v2.tsv  full_verify_v3.tsv
assets/png-bench/cycle111/: r6_probe.tsv  r6_probe_v2.tsv
assets/png-bench/cycle112/: path_b.tsv  path_b_v2.tsv
assets/png-bench/cycle113/: nupic_size.tsv
assets/png-bench/cycle114/: nupic_zopfli.tsv
assets/png-bench/cycle116/: webp_sweep.tsv
assets/png-bench/cycle118/: avif_sweep.tsv
assets/png-bench/inputs-ext-real/: README.md
crates/nupic-bits/: Cargo.toml
crates/nupic-bits/src/: lib.rs
crates/nupic-bits/tests/: properties.rs
crates/nupic-cli/: Cargo.toml
crates/nupic-cli/examples/: gen_test_image.rs
crates/nupic-cli/src/: cli.rs  main.rs  runner.rs
crates/nupic-cli/tests/: cli_smoke.rs
crates/nupic-color/: Cargo.toml
crates/nupic-color/src/: lib.rs
crates/nupic-color/tests/: fixture_roundtrip.rs  properties.rs
crates/nupic-core/: Cargo.toml
crates/nupic-core/src/: color.rs  detect.rs  error.rs  font.rs  format.rs  geom.rs  image_handle.rs  lib.rs  metrics.rs  ops.rs  text.rs
crates/nupic-core/src/ops/: circle.rs  compress.rs  crop.rs  denoise.rs  filter.rs  fit.rs  mock.rs  resize.rs  watermark.rs
crates/nupic-core/tests/: contracts.rs  encoding.rs  errors.rs
crates/nupic-core/tests/common/: mod.rs
crates/nupic-deflate/: Cargo.toml
crates/nupic-deflate/src/: huffman.rs  lib.rs  lz77.rs  tables.rs
crates/nupic-deflate/tests/: roundtrip.rs
crates/nupic-png/: Cargo.toml
crates/nupic-png/src/: filter.rs  lib.rs
crates/nupic-png/tests/: roundtrip.rs
crates/nupic-quantize/: Cargo.toml
crates/nupic-quantize/src/: lib.rs
crates/nupic-quantize/tests/: cement_strict.rs  properties.rs
crates/nupic-research/: Cargo.toml  README.md
crates/nupic-research/examples/: alpha_expansion.rs  codebook_c0_bench.rs  cycle100_r4_widened_corpus500.rs  cycle101_r10_filter_probe.rs  cycle102_07product_squeeze.rs  cycle102_attempt2_preset6.rs  cycle102_attempt3_palette_sweep.rs  cycle102_attempt4_03_lowk.rs  cycle103_routing_validate.rs  cycle105_p03_validation.rs  cycle106_r4_rd_emit.rs  cycle106_r4_rd_pile_a.rs  cycle106_r4_rd_pile_a_grid.rs  cycle107_oracle_sample.rs  cycle107_quick_single.rs  cycle107_single_config_full_corpus.rs  cycle107_single_config_sample.rs  cycle108_input_k_classifier.rs  cycle109_validation.rs  cycle111_r6_multitile_probe.rs  cycle112_path_b_hybrid.rs  cycle113_nupic_size_estimate.rs  cycle114_k_high_probe.rs  cycle116_webp_for_r6.rs  cycle118_avif_for_r6.rs  cycle11_tier4_split.rs  cycle12_05_profile.rs  cycle12_iq_quality.rs  cycle12_iq_speed_corpus.rs  cycle13_default_auto.rs  cycle14_perf_breakdown.rs  cycle17_var_diff_sampling.rs  cycle21_zopfli_probe.rs  cycle22_01_classify.rs  cycle90_r1_r8_r9_combined.rs  cycle91a_r1_routing_classifier.rs  cycle92_r1_classifier_corpus500.rs  cycle93_r1_classifier_richer_features.rs  cycle94_r1_classifier_heldout.rs  cycle95_r1_logistic_regression.rs  (+41 more)
crates/nupic-research/src/: bench.rs  codebook_c0.rs  lib.rs  ssim_b1.rs
crates/nupic-ssimulacra/: Cargo.toml
crates/nupic-ssimulacra/src/: lib.rs
crates/nupic-ssimulacra/tests/: cement_agreement.rs  properties.rs
docs/: png-pipeline.md  references.md  requirements.md  roadmap.md
docs/research/: README.md
docs/research/paper/: draft.md
docs/research/png/: 00-attack-surface.md  00-research-timeline.md  01-pluto-case.md  02-perceptual-metrics.md  03-perceptual-stone.md  03a-bis-oklab-simd.md  03a-oklab-design.md  03a-ter-oklab-graduation.md  03b-bis-ssim-b1.md  03b-quater-ssim-b4.md  03b-quinquies-ssim-b5.md  03b-six-graduation.md  03b-ssimulacra2-design.md  03b-ter-ssim-b2.md  03c-bis-codebook-c0.md  03c-codebook-design.md  03c-ter-graduation.md  03d-stone-d-design.md  03e-stone-e-fs-dither.md  03f-pareto-tiered-dither.md  03g-adaptive-iter.md  03h-dither-variants.md  03i-perf-cliff.md  03j-deflate-nice-match.md  03k-default-flip-gap.md  03l-palette-pad-split.md  03m-cycle11-tier4-content-split.md  03n-cycle12-13-ceiling-floor.md  03o-cycle14-lloyd-perf.md  03p-cycle16-perf-attempts-negative.md  03q-cycle17-sampling-bias-fix.md  03r-cycle21-zopfli-effort.md  03s-cycle23-tier3-uniq-guard.md  03t-cycle24-25-gradient-lossless.md  03u-cycle27-real-photo-corpus.md  03v-cycle28-29-trans-sharpmask.md  03w-cycle30-round2-corpus.md  03x-cycle31-tier4b-adjmn.md  03y-cycle32-tier4e-narrow-band.md  03z-cycle33-tier4f-chunky-run.md  (+87 more)
scripts/: install.sh
scripts/png-bench/: README.md  analyze_dssim_verdict.py  corpus_dssim.py  corpus_ssim.py  extract_pile_a.py  nupic_corpus_compress.py  tinypng_ingest.py
