[workspace]
resolver = "3"
members = [
    "crates/nupic-cli",
    "crates/nupic-core",
]

[workspace.package]
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/goliajp/nupic"
authors = ["doracawl <lihao@golia.jp>"]

[workspace.dependencies]
nupic-core = { path = "crates/nupic-core" }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "wrap_help"] }
image = { version = "0.25", default-features = false }
oxipng = { version = "9", default-features = false, features = ["parallel"] }
ravif = { version = "0.11", default-features = false, features = ["threading"] }
rgb = "0.8"
fast_image_resize = { version = "5", default-features = false, features = ["image", "rayon"] }
ab_glyph = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
