[workspace]
resolver = "3"
members = [
    "crates/nupic-bits",
    "crates/nupic-cli",
    "crates/nupic-color",
    "crates/nupic-core",
    "crates/nupic-deflate",
    "crates/nupic-png",
    "crates/nupic-quantize",
    "crates/nupic-research",
    "crates/nupic-ssimulacra",
]

[workspace.dependencies.crc32fast]
version = "1"

[workspace.dependencies.adler32]
version = "1"

[workspace.package]
version = "1.1.14"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/goliajp/nupic"
authors = ["doracawl <lihao@golia.jp>"]

[workspace.dependencies]
nupic-core = { path = "crates/nupic-core" }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "wrap_help"] }
clap_complete = "4"
image = { version = "0.25", default-features = false }
oxipng = { version = "9", default-features = false, features = ["parallel", "zopfli"] }
ravif = { version = "0.11", default-features = false, features = ["threading"] }
rgb = "0.8"
fast_image_resize = { version = "5", default-features = false, features = ["image", "rayon"] }
ab_glyph = "0.2"
webp = { version = "0.3", default-features = false, features = ["image"] }
dssim = { version = "3", default-features = false }
imgref = "1"
imagequant = { version = "4", default-features = false }
png = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssimulacra2 = "0.5"
oklab = "1"
fast-srgb8 = "1"
wide = "0.7"
yuvxyb = "0.4"
rayon = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
