[package]
name = "nupic-deflate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Self-built DEFLATE encoder (RFC 1951) and zlib wrapper (RFC 1950). Stage 1 of the nupic PNG codec roadmap. Stage 1.4 ships zopfli-class iterative LZ77: 5-pass cost-DP refinement with Huffman feedback (chain depth 512) + variable-position block split + per-block static/dynamic Huffman. All 7 corpus inputs now ≤ 1.05× zopfli — stage-1 graduation criterion met. PNG IDAT corpus: 1.04× oxipng (was 1.08× at phase 1.3). Depends only on `nupic-bits` for CRC / Adler / bit I/O."

[dependencies]
nupic-bits = { path = "../nupic-bits" }

[dev-dependencies]
# Cement oracles — verify our output round-trips through real decompressors.
flate2 = "1"
# Sibling stone — used in property tests to verify Adler-32 footer.
nupic-bits = { path = "../nupic-bits" }
# Property-based fuzz oracle — randomized roundtrip coverage.
quickcheck = "1"
quickcheck_macros = "1"
