[package]
name = "nupic-research"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Research-grade experiments backing docs/research/. Not part of the public API surface — each binary here is paired with an essay under docs/research/ and is allowed to depend on whatever it needs to make a measurement. Successful experiments graduate into nupic-core or a dedicated stone crate."
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
nupic-core = { workspace = true }
nupic-color = { path = "../nupic-color" }
nupic-ssimulacra = { path = "../nupic-ssimulacra" }
nupic-quantize = { path = "../nupic-quantize" }
nupic-bits = { path = "../nupic-bits" }
nupic-deflate = { path = "../nupic-deflate" }
crc32fast = { workspace = true }
adler32 = { workspace = true }
flate2 = "1"
imagequant = { workspace = true }
png = { workspace = true }
oxipng = { workspace = true }
image = { workspace = true, features = ["png"] }
rgb = { workspace = true }
anyhow = { workspace = true }
ssimulacra2 = { workspace = true }
oklab = { workspace = true }
fast-srgb8 = { workspace = true }
wide = { workspace = true }
yuvxyb = { workspace = true }
rayon = { workspace = true }
